# FantaGal

./: .gitignore  App.tsx  ESTADO_ACTUAL.md  GEMINI.md  GUIA_PUBLICACION_PLAY_STORE.md  README.md  build.gradle.kts  capacitor.config.ts  gradle.properties  gradlew  index.html  metadata.json  package-lock.json  package.json  settings.gradle.kts  types.ts
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BaseSynthEngine.h  CMakeLists.txt  NativeAudioEngine.cpp  NativeAudioEngine.h  SynthState.h
app/src/main/cpp/engines/: BreitemaEngine.cpp  BreitemaEngine.h  CriosferaEngine.cpp  CriosferaEngine.h  DSPComponents.h  GearheartEngine.cpp  GearheartEngine.h  VocoderEngine.cpp  VocoderEngine.h  VocoderProcessor.cpp  VocoderProcessor.h
app/src/main/cpp/jni/: native-lib.cpp
app/src/main/res/values/: colors.xml  (+2 more)
components/: BreitemaUI.tsx  BubbleXYPad.tsx  ControlSlider.tsx  ControlsPanel.tsx  EchoVesselUI.tsx  EngineSelector.tsx  GearSequencer.tsx  GearheartUI.tsx  SettingsModal.tsx  Visualizer.tsx  VocoderUI.tsx
hooks/: useCanvasDimensions.ts  useSynth.ts
services/: AbstractSynthEngine.ts  AudioEngine.ts  BaseSynthEngine.ts  EngineRegistry.ts  GeminiService.ts  SynthManager.ts  audioUtils.ts
services/engines/: BreitemaEngine.ts  CriosferaEngine.ts  EchoVesselEngine.ts  GearheartEngine.ts  VocoderEngine.ts  breitema.register.ts  criosfera.register.ts  echoVessel.register.ts  gearheart.register.ts  index.ts  vocoder.register.ts
(+25 files in other folders)
